# pymagicc

./: .bandit.yml  .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SConstruct  appveyor.yml  apt.txt  dev-requirements.txt  environment.yaml  index.ipynb  mkdocs.yml  postBuild  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.MD
.travis/: before_install.sh
docs/: 404.html  Makefile  api.md  conf.py  developing.rst  development.rst  file_conventions.rst  index.html  index.rst  magicc_flags.rst  magicc_variables.rst  pymagicc.api.rst  pymagicc.config.rst  pymagicc.core.rst  pymagicc.definitions.rst  pymagicc.io.rst  pymagicc.magicc_time.rst  pymagicc.rst  pymagicc.utils.rst  requirements.txt  search.html  sitemap.xml  usage.rst
docsrc/: api.md  developing.md  file_conventions.md  pymagicc.api.md  pymagicc.config.md  pymagicc.input.md  pymagicc.md
notebooks/: Building-Scenarios.ipynb  Demo.ipynb  Diagnose-TCR-ECS-TCRE.ipynb  Diagnose-TCR-ECS.ipynb  Example.ipynb  Filtering-Plotting.ipynb  HISTEXAMPLE_CO2I_EMIS.IN  Input-Examples.ipynb  MAGICC7.ipynb  MODEL-NAME-HYPHENS_SCENARIO-A-B-CDE-2.SCEN7  MODEL-NAME-HYPHENS_SCENARIO-NAME-HYPHENS.SCEN7  NAME-MODEL-2_SCENARIO-A-B-CDE-2.SCEN7  NAME-MODEL-2_SCENARIO-NAME-HYPHENS.SCEN7  Parallel-Runs.ipynb  README.md  Regional-Split.ipynb  Regionally-Split-And-Global-Scenarios.ipynb  Run-Modes.ipynb  SCENEXAMPLE.SCEN  _magicc_instances.py  diagnose-tcr.ipynb  emissions_units.txt  foo_bar.SCEN  foo_bar.SCEN7  io-Examples.ipynb  rewrite-scen7-as-scen.ipynb  running-CEDS-scenarios.ipynb  tests_sanitize.cfg
paper/: Makefile  codemeta.json  paper.bib  paper.md
(+872 files in other folders)
