[metadata]
description-file = README.rst

[tool:pytest]
testpaths = tests

[versioneer]
VCS = git
style = pep440
versionfile_source = pymagicc/_version.py
versionfile_build = pymagicc/_version.py
tag_prefix = v
parentdir_prefix = pymagicc-

[flake8]
max-line-length = 88
ignore = E203, E266, E501, W503
