[flake8]
max-line-length = 88
ignore = E203, E266, E501, W503, E231

[isort]
default_section = THIRDPARTY
# comma after multiline breaks like black:
include_trailing_comma = true
known_first_party = pymagicc
# black default line length:
line_length = 88
# multiline breaks like black:
multi_line_output = 3
not_skip = __init__.py
skip = versioneer.py, pymagicc/_version.py

[metadata]
description-file = README.rst

[mypy]
disallow_incomplete_defs = true
disallow_subclassing_any = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[pydocstyle]
# D213 - Multi-line docstring summary should start at the second line
# D402 - First line should not be the function's 'signature'
add_select = D213, D402
# D105 -Missing docstring in magic method
# D200 - One-line docstring should fit on one line with quotes
# D205 - 1 blank line required between summary line and description
# D400 - First line should end with a period
add_ignore = D200, D205, D400, D105
convention = numpy
inherit = false
match = (?!test_|_version).*\.py

[tool:pytest]
testpaths = tests

[versioneer]
VCS = git
style = pep440
versionfile_source = pymagicc/_version.py
versionfile_build = pymagicc/_version.py
tag_prefix = v
parentdir_prefix = pymagicc-
